src/assets/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 82 50% 99%;
    --foreground: 82 64% 0%;
    --muted: 82 39% 87%;
    --muted-foreground: 82 8% 31%;
    --popover: 82 50% 99%;
    --popover-foreground: 82 64% 0%;
    --card: 82 50% 98%;
    --card-foreground: 0 0% 0%;
    --border: 82 9% 94%;
    --input: 82 9% 94%;
    --primary: 82 85% 67%;
    --primary-foreground: 82 85% 7%;
    --secondary: 82 1% 91%;
    --secondary-foreground: 82 1% 31%;
    --accent: 82 8% 82%;
    --accent-foreground: 82 8% 22%;
    --destructive: 11 87% 34%;
    --destructive-foreground: 11 87% 94%;
    --error: 11 84% 84%;
    --error-foreground: 11 84% 24%;
    --success: 143 84% 84%;
    --success-foreground: 143 84% 4%;
    --warning: 51 84% 84%;
    --warning-foreground: 51 84% 4%;
    --info: 209 84% 84%;
    --info-foreground: 209 84% 24%;
    --ring: 82 85% 67%;
    --radius: 0.5rem;

    --muted: 82 8% 69%;
    --subtle: 80.3 86.1% 45.9%;
    --plain: 81.1 26.8% 58.2%;
    --yell: 352 84.5% 62.1%;
    --speak: 46.1 84.5% 62.1%;
    --whisper: 355.1 90.2% 72.9%;
    --shy: 82.2 51.4% 43.5%;
    --extra: 81.5 61.1% 55.1%;
  }

  .dark {
    --background: 82 34% 6%;
    --foreground: 82 37% 100%;
    --muted: 82 39% 13%;
    --muted-foreground: 82 8% 69%;
    --popover: 82 34% 5%;
    --popover-foreground: 82 37% 100%;
    --card: 82 34% 6%;
    --card-foreground: 0 0% 100%;
    --border: 82 9% 12%;
    --input: 82 9% 12%;
    --primary: 82 85% 67%;
    --primary-foreground: 82 85% 7%;
    --secondary: 82 6% 8%;
    --secondary-foreground: 82 6% 68%;
    --accent: 82 13% 14%;
    --accent-foreground: 82 13% 74%;
    --destructive: 11 87% 55%;
    --destructive-foreground: 0 0% 100%;
    --error: 8 83% 13%;
    --error-foreground: 8 83% 73%;
    --success: 139 83% 13%;
    --success-foreground: 139 83% 53%;
    --warning: 35 83% 13%;
    --warning-foreground: 35 83% 73%;
    --info: 210 83% 13%;
    --info-foreground: 210 83% 73%;
    --ring: 82 85% 67%;

    --muted: 82 8% 69%;
    --subtle: 81.1 26.8% 58.2%;
    --plain: 80.3 86.1% 85.9%;
    --yell: 352 84.5% 67.1%;
    --speak: 46.1 84.5% 67.1%;
    --whisper: 355.1 90.2% 75.9%;
    --shy: 82.2 41.4% 43.5%;
    --extra: 81.5 51.1% 55.1%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    /* font-feature-settings: "rlig" 1, "calt" 1; */
    font-synthesis-weight: none;
    text-rendering: optimizeLegibility;
  }
}

